--- a/.github/workflows/daily_reports.yaml
+++ b/.github/workflows/daily_reports.yaml
@@ -108,8 +108,9 @@ jobs:
             ${{ github.event_name == 'workflow_dispatch'
               && secrets.TEST_CHANNEL_SLACK
               || format(
-                  '{0} {1}',
+                  '{0} {1} {2}',
                   secrets.ETHREX_L1_SLACK_WEBHOOK,
+                  secrets.ETHREX_L2_SLACK_WEBHOOK,
                   secrets.LEVM_SLACK_WEBHOOK
                 )
             }}
