--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -9,9 +9,11 @@ path = "src/lib.rs"
 
 [dependencies]
 ethrex-levm = { path = "../../" }
-hex = "0.4.3"
+
+hex.workspace = true
+bytes.workspace = true
+
 revm = "9.0.0"
-bytes = "1.8.0"
 
 [[bin]]
 name = "levm_factorial"
