--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -17,6 +17,10 @@ revm = "9.0.0"
 sha3 = "0.10.8"
 
 [[bin]]
+name = "compile"
+path = "src/compile.rs"
+
+[[bin]]
 name = "levm_factorial"
 path = "src/levm_factorial.rs"
 
@@ -33,17 +37,9 @@ name = "revm_fibonacci"
 path = "src/revm_fibonacci.rs"
 
 [[bin]]
-name = "levm_ten_thousand_hashes"
-path = "src/levm_ten_thousand_hashes.rs"
+name = "levm_many_hashes"
+path = "src/levm_many_hashes.rs"
 
 [[bin]]
-name = "revm_ten_thousand_hashes"
-path = "src/revm_ten_thousand_hashes.rs"
-
-[[bin]]
-name = "levm_snailtracer"
-path = "src/levm_snailtracer.rs"
-
-[[bin]]
-name = "revm_snailtracer"
-path = "src/revm_snailtracer.rs"
+name = "revm_many_hashes"
+path = "src/revm_many_hashes.rs"
