wip: add CI file

--- a/.github/workflows/flamegraph_reporter_ethrex.yaml
+++ b/.github/workflows/flamegraph_reporter_ethrex.yaml
@@ -7,7 +7,7 @@ permissions:
 
 on:
   push:
-    branches: [ "main", "automate-perf-tests" ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 env:
