--- a/.github/workflows/flamegraph_reporter_levm.yaml
+++ b/.github/workflows/flamegraph_reporter_levm.yaml
@@ -11,15 +11,14 @@ concurrency:
 
 on:
   push:
-    branches: [ "main", "levm/perf/automate_flamegraph" ]
+    branches: ["main", "levm/perf/automate_flamegraph"]
   workflow_dispatch:
 
 jobs:
   flamegraph-levm:
     name: Generate Flamegraph for LEVM
     runs-on: ubuntu-latest
-    env:
-      PROGRAM: ethrex
+    # TODO set time
     outputs:
       time: ${{steps.generate-flamegraph-levm.outputs.time}}
     steps:
@@ -88,21 +87,18 @@ jobs:
             echo "$HOME/.cargo/bin/inferno-collapse-perf" already found
           fi
 
+      - name: Download EF Tests
+        run: |
+          cd crates/vm/levm
+          make download-evm-ef-tests
+
       - id: generate-flamegraph-levm
         name: Generate Flamegraph data for LEVM
         shell: bash
         run: |
-          rm -rf target/release/ethrex
+          rm -rf target/debug/ef_tests_levm
           CARGO_PROFILE_RELEASE_DEBUG=true cargo flamegraph -c "record -o perf.data -F997 --call-graph dwarf,16384 -g" \
-          --bin ethrex --features dev -- --network /home/runner/work/ethrex/ethrex/test_data/genesis-l2.json --http.port 1729 >/dev/null &
-          while [ ! -x "./target/release/ethrex" ]; do
-            echo "Waiting for ethrex binary to be ready..."
-            sleep 2
-          done
-          sleep 10
-          echo "Compilation finished. Executing load test..."
-          bash /home/runner/work/ethrex/ethrex/.github/scripts/flamegraph_watcher.sh &&
-          echo "Load test finished"
+          -p ef_tests-levm
 
       - name: Generate SVG
         shell: bash
@@ -121,8 +117,7 @@ jobs:
   flamegraph-revm:
     name: Generate Flamegraph for REVM
     runs-on: ubuntu-latest
-    env:
-      PROGRAM: reth
+    # TODO set time
     outputs:
       time: ${{steps.generate-flamegraph-revm.outputs.time}}
     steps:
@@ -131,19 +126,6 @@ jobs:
 
       - name: Rustup toolchain install
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Checkout reth
-        uses: actions/checkout@v4
-        with:
-          repository: paradigmxyz/reth
-          path: "reth"
-          ref: main
-
-      - name: Caching
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: '. -> target
-          ./reth -> ./reth/target'
 
       - name: Cache Extra Binaries
         id: cache-binaries
@@ -154,13 +136,6 @@ jobs:
             ${{ env.HOME }}/.cargo/bin/flamegraph
             ${{ env.HOME }}/.cargo/bin/inferno-*
           key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
-
-      - name: Cache ethrex_l2
-        id: cache-ethrex-l2
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.HOME }}/.cargo/bin/ethrex_l2
-          key: ${{ runner.os }}-${{ env.RUST_VERSION }}-ethrex-l2-${{ hashFiles('cmd/ethrex_l2/Cargo.lock') }}
 
       - name: Change perf settings
         run: |
@@ -208,43 +183,24 @@ jobs:
             echo "$HOME/.cargo/bin/inferno-collapse-perf" already found
           fi
 
-      - name: Install ethrex_l2 cli
+      - name: Download EF Tests
         run: |
-          if [ -f "$HOME/.cargo/bin/ethrex_l2" ]; then
-            echo "$HOME/.cargo/bin/ethrex_l2" already found
-          else
-            cargo install --force --path cmd/ethrex_l2
-          fi
-          ethrex_l2 config create default --default
-          ethrex_l2 config set default
+          cd crates/vm/levm
+          make download-evm-ef-tests
 
       - id: generate-flamegraph-revm
         name: Build and test REVM
         shell: bash
         # --dev.block-time 1000ms set to 1000ms to match ethrex block generation time
         run: |
-          cd ./reth
-          rm -rf target/profiling/reth
           CARGO_PROFILE_RELEASE_DEBUG=true cargo flamegraph -c "record -o perf.data -F997 --call-graph dwarf,16384 -g" \
-          --bin reth --profile profiling -- node --chain /home/runner/work/ethrex/ethrex/test_data/genesis-load-test.json --dev \
-          --dev.block-time 1000ms --http.port 1729  --txpool.max-pending-txns 100000000 --txpool.max-new-txns 1000000000 \
-          --txpool.pending-max-count 100000000 --txpool.pending-max-size 10000000000 --txpool.basefee-max-count 100000000000 \
-          --txpool.basefee-max-size 1000000000000 --txpool.queued-max-count 1000000000 >/dev/null &
-          while [ ! -x "./target/profiling/reth" ]; do
-            echo "Waiting for reth binary to be ready..."
-            sleep 10
-          done
-          sleep 30
-          echo "Executing load test..."
-          bash /home/runner/work/ethrex/ethrex/.github/scripts/flamegraph_watcher.sh &&
-          echo "Load test finished"
-
+          -p ef_tests-levm -- --revm
 
       - name: Generate SVG
         shell: bash
         run: |
           PATH=$HOME/.cargo/bin:$PATH which addr2line
-          PATH=$HOME/.cargo/bin:$PATH perf script -v -i /home/runner/work/ethrex/ethrex/reth/perf.data --no-inline > stack.data
+          PATH=$HOME/.cargo/bin:$PATH perf script -v -i /home/runner/work/ethrex/ethrex/perf.data --no-inline > stack.data
           PATH=$HOME/.cargo/bin:$PATH inferno-collapse-perf -q < stack.data > collapsed.data
           PATH=$HOME/.cargo/bin:$PATH inferno-flamegraph --title "Reth Flamegraph" < collapsed.data > flamegraph_revm.svg
 
@@ -260,7 +216,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}/levm
-    needs: [ flamegraph-levm, flamegraph-revm ]
+    needs: [flamegraph-levm, flamegraph-revm]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
