--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -43,3 +43,11 @@ path = "src/levm_many_hashes.rs"
 [[bin]]
 name = "revm_many_hashes"
 path = "src/revm_many_hashes.rs"
+
+[[bin]]
+name = "levm_erc20_mint"
+path = "src/levm_erc20_mint.rs"
+
+[[bin]]
+name = "revm_erc20_mint"
+path = "src/revm_erc20_mint.rs"
