Add token to Create or update comment steps

--- a/.github/workflows/ci_bench_levm.yaml
+++ b/.github/workflows/ci_bench_levm.yaml
@@ -125,6 +125,7 @@ jobs:
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body-path: combined_result.md
           edit-mode: replace
