--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -18,7 +18,10 @@ serde_json.workspace = true
 bytes.workspace = true
 
 tokio = { version = "1.21", default-features = false, features = ["full"] }
-reqwest = { version = "0.12.9", features = ["json"] }
+reqwest = { version = "0.12.9", features = [
+  "json",
+  "rustls-tls",
+], default-features = false }
 clap = { version = "4.5.21", features = ["derive"] }
 
 revm = { version = "14.0.3", features = [
@@ -37,3 +40,4 @@ revm-primitives = { version = "10.0.0", features = [
 futures-util = "0.3.31"
 tokio-utils = "0.1.2"
 again = "0.1.2"
+lazy_static = "1.5.0"
